syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
package DwFramework.RPC.Plugins;

service Cluster {
    rpc Join (google.protobuf.Empty) returns (google.protobuf.StringValue);
    rpc HealthCheck (google.protobuf.Empty) returns (google.protobuf.Empty);
    rpc SyncRouteTable (RouteTable) returns (google.protobuf.Empty);
    rpc SyncData (Data) returns (google.protobuf.Empty);
}

message RouteTable {
    map<string,string> Value = 1;
}

message Data {
    int32 Type = 1;
    string Hex = 2;
}

